prueba de footer y burger en moviles

--- a/config.toml
+++ b/config.toml
@@ -21,7 +21,7 @@ sectionPagesMenu = "mi_menu_principal"
   showDate = true
   github = "https://github.com/marcelishius98"
   #facebook = "https://facebook.com/amomsay"
-  instagram = "https://instagram.com/amomsay"
+  instagram = "https://www.instagram.com/_amomsay/"
   favicon = "/images/favicon-16x16.png"
   sitename = "Example Site Name"
   twitter = "https://twitter.com/amomsay"
